--- a/index1.css
+++ b/index1.css
@@ -1,11 +1,80 @@
 body {
-	background-image: url('b1.png');
-	background-size: cover;
+    background-image: url('p1.png');
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin: 0;
-    height: 100vh;
-    width: 100vw;
-    overflow-x: hidden;
+    
+    overflow: hidden;
+    padding: 0;
 }
+
+
+.airplane {
+    position: absolute;
+    top: 100px;
+    right: 0;
+}
+
+.airplane img {
+    max-width: 500px; 
+    top:100px;
+    transform: rotate(-10deg); 
+    animation: shake 0.15s linear infinite;
+}
+
+@keyframes shake {
+    0%, 100% {
+        transform: rotate(-10deg) translateY(0);
+    }
+    50% {
+        transform: rotate(-10deg) translateY(-5px);
+    }
+}
+
+.button {
+    position: fixed;
+    bottom: 20px;
+    left: 10%;
+    transform: translateX(-50%);
+}
+
+@keyframes disappear{
+
+0%, 100% {
+        opacity: 0;
+    }
+    80% {
+        opacity: 1;
+    }
+}
+
+.tail {
+     position: absolute;;
+     width: 2px;
+    top: 50px;
+    right: 0;
+    animation: disappear 2s linear infinite;
+}
+
+.monitor {
+    position: absolute;
+    width: 60%;
+    bottom: -60px;
+    left: 20%;
+    animation: rotate 5s ease-in-out infinite;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateZ(-2deg);
+  }
+  50% {
+    transform: rotateZ(2deg);
+  }
+  100% {
+    transform: rotateZ(-2deg);
+  }
+}
+
