--- a/index3.css
+++ b/index3.css
@@ -10,6 +10,19 @@ body {
     height: auto;
     
 }
+@font-face{
+            font-family:caviar dream;
+            src: url('CaviarDreams.ttf');
+        }
+
+#text{
+    font-family:caviar dream;
+    font-size: 40pt;
+    color: white;
+    position: absolute;
+    top: 80px;
+    left: 480px;
+}
 
 #airplane {
     position: fixed;
